# OS-Wet3

./: CMakeLists.txt  JobQueue-NEW.h  JobQueue.cpp  JobQueue.h  Makefile  QueueManager.cpp  QueueManager.h  Worker.cpp  Worker.h  client  client.c  jobsQueue.cpp  jobsQueue.h  main.cpp  map.c  map.h  output.cgi  request.c  request2.cpp  request2.h  segel2.cpp  segel2.h  server.c  shit.cpp  sortedList.h  test.h  threadQueue.cpp  threadQueue.h
output.cgi000/Contents/Resources/DWARF/: output
